syntax = "proto3";

package NAPS2.Remoting.Network;

import "NAPS2.Sdk/Remoting/Error.proto";
import "NAPS2.Sdk/Serialization/SerializedImage.proto";

service NetworkScanService {
	rpc GetCapabilities (GetCapabilitiesRequest) returns (GetCapabilitiesResponse) {}
	rpc GetDeviceList (GetDeviceListRequest) returns (GetDeviceListResponse) {}
	rpc Scan (ScanRequest) returns (stream ScanResponse) {}
}

message GetCapabilitiesRequest {
}

message GetCapabilitiesResponse {
	NAPS2.Remoting.Error error = 1;
	repeated string supportedDrivers = 2;
}

message GetDeviceListRequest {
	string optionsXml = 1;
}

message GetDeviceListResponse {
	NAPS2.Remoting.Error error = 1;
	string deviceListXml = 2;
}

message ScanRequest {
	string optionsXml = 1;
}

message ScanResponse {
	oneof event {
		NAPS2.Remoting.Error error = 1;
		NAPS2.Serialization.SerializedImage image = 2;
		ProgressEvent progress = 3;
		PageStartEvent pageStart = 4;
	}
}

message ProgressEvent {
	double value = 1;
}

message PageStartEvent {
}
